separate server and Devices selection